#11: moved meta response output up out of array